Fix `align-issue-labels` selector (#3380)

--- a/source/features/align-issue-labels.css
+++ b/source/features/align-issue-labels.css
@@ -1,5 +1,5 @@
 /* Move labels in the Issue/PR list below the title */
-.rgh-align-issue-labels .js-issue-row .lh-condensed {
+.rgh-align-issue-labels .js-issue-row .min-width-0 {
 	display: flex;
 	flex-wrap: wrap;
 }
